--- a/docs/thebook/Book.tex
+++ b/docs/thebook/Book.tex
@@ -63,7 +63,7 @@ $ #3 \ $ \end{tcolorbox}}  \end{tcolorbox}}
 
 \newcommand{\warn}[1]{\begin{tcolorbox}[fonttitle=\bfseries,coltitle=black,colframe=red!90, title=!Warning!]#1 \end{tcolorbox}}
 
-
+\newcommand{\inv}{\mbox{{ \vspace{-3pt} \string^}\!-1}}
 \newcommand{\mess}[1]{\begin{tcolorbox}[colback=white,colframe=gray] #1 \end{tcolorbox}}
 \newcommand{\code}[1]{\begin{verbatim} #1 \end{verbatim}}
 
@@ -124,6 +124,8 @@ $ #3 \ $ \end{tcolorbox}}  \end{tcolorbox}}
 \include{SetTheory/settheory}
 \include{Numbers/numbers}
 \include{Relations/relations}
+\include{SetTheory/finsets}
+
 \include{Algebraic/algstr}
 \appendix
 %\appendixpage
