--- a/docs/thebook/Tactics/language.tex
+++ b/docs/thebook/Tactics/language.tex
@@ -1,4 +1,4 @@
-\chapter{ A brief overview of the notations in the language}
+\chapter{ A brief overview of the notations in the language}\label{ch:language}
 
 
 
